# university

3sem/curs/вика/: 123.odt  курсовая3.docx  курсовая4.docx  курсовая5-10-2.odg  курсовая5.docx  курсовая5.odt
3sem/curs/моя/: Курсовая.docx
3sem/curs/моя/src_string/: CMakeLists.txt  Makefile  my_string.c  my_string.h
3sem/curs/моя/src_string/tests/: tests.c
3sem/curs/серега/: Курсовая.docx
3sem/curs/шо/: Курсовая.docx
3sem/dm/: main.c  res  ЛР 3.2 Мирошник ДМ.odg
3sem/dm/3-2/: 1.c  2.c  4.c  res  res4  ДМ_3.2 (1).docx
3sem/dm/3-3/: 1.c  2.c  main.cpp  res  zadanie.c
3sem/dm/3-4/: 3-4.docx
3sem/dm/4-1/: 4-1.docx
3sem/dm/4-2/: Лабораторная_работа_№4_2_Коноваленко_Матвей_КБ_231.docx
3sem/dm/4-3/: DM_Lab_7.docx  main.c  main.py  res
3sem/асд /: .~lock.Лекции по SD.doc#  Voprosy_SD.doc  Лекции по SD.doc
4sem/analys/lab0/: .~lock.АД Масленников 0.docx#  hlp.py  res.py  АД Масленников 0.docx
4sem/analys/lab1/: covid.csv  hlp.py  res.py  АД Масленников 01.docx
4sem/io/: 2.py  lab1.py  main.aux  main.toc  test.aux  test.out  test.pyg  test.tex  test.toc
4sem/io/_minted-main/: E2CFF0027B327CC38343FA6ED49A065A541C68F80C6A6F06151AFD63BAE50EBC.pygtex
4sem/io/lab2/: 2.py  main.py  лр2Масленников.docx
4sem/io/lab3/: 2.py  main.py  лр3Масленников.docx
4sem/io/lab4/: лр4Масленников.docx
4sem/io/lab6/: лр6Масленников.docx
4sem/io/lab8/: main.py  лр8Масленников.docx
4sem/io/Лаба 1/: main.aux  (+4 more)
4sem/pravo/: .~lock.pravo.docx#  pravo.docx
4sem/vi4_mat/: lab0.docx  main.tex
5sem/computer_architecture/: .~lock.Лабораторная работа №1.docx#
(+342 files in other folders)
